--- a/articulos/diabetes.html
+++ b/articulos/diabetes.html
@@ -19,6 +19,13 @@
         </a>
     </header>
     
+    <nav aria-label="breadcrumbs">
+        <p>
+            <a href="../index.html">Inicio</a> &gt; 
+            <a href="../indices/d.html">Índice Alfabético</a> &gt; 
+            Diabetes
+        </p>
+    </nav>
 
     <main>
         <h2>Diabetes</h2>
