--- a/articulos/dolor_cabeza.html
+++ b/articulos/dolor_cabeza.html
@@ -13,6 +13,14 @@
             <img src="../imagenes/logo.jpeg" alt="Logo de la página" width="200" height="200">
         </a>
     </header>
+    
+    <nav aria-label="breadcrumbs">
+        <p>
+            <a href="../index.html">Inicio</a> &gt; 
+            <a href="../indices/d.html">Índice Alfabético</a> &gt; 
+            Dolor de Cabeza
+        </p>
+    </nav>
 
     <main>
         <h2>Dolor de Cabeza</h2>
