--- a/formulario/formulariohtml5.html
+++ b/formulario/formulariohtml5.html
@@ -2,7 +2,7 @@
 <html lang="es">
  <head>
         <meta charset="UTF-8">
-        <title>Formulario de contacto - HealthHub </title>
+        <title>Formulario de síntomas - HealthHub </title>
     </head>
 <body>
 
@@ -12,6 +12,13 @@
             <img src="../imagenes/logo.jpeg" alt="Logo de la página" width="200" height="200">
         </a>
     </header>
+ 
+    <nav aria-label="breadcrumbs">
+        <p>
+            <a href="../index.html">Inicio</a> &gt; 
+            Formulario de síntomas
+        </p>
+    </nav>
 
     <h2>Formulario de Síntomas</h2>
     <p>Los campos marcados con * son obligatorios.</p>
