--- a/formulario/formulario.html
+++ b/formulario/formulario.html
@@ -11,6 +11,14 @@
             <img src="../imagenes/logo.jpeg" alt="Logo de la página" width="200" height="200">
         </a>
     </header>
+
+    <nav aria-label="breadcrumbs">
+        <p>
+            <a href="../index.html">Inicio</a> &gt; 
+            Formulario de ayuda al cliente
+        </p>
+    </nav>
+    
     <main>
         <h2>Formulario de contacto</h2>
         <p>Los campos marcados con * son obligatorios.</p>
