--- a/buscador/resultado.html
+++ b/buscador/resultado.html
@@ -11,6 +11,13 @@
             <img src="../imagenes/logo.jpeg" alt="Logo de la página" width="200" height="200">
         </a>
     </header>
+    <nav aria-label="breadcrumbs">
+        <p>
+            <a href="../index.html">Inicio</a> &gt; 
+            <a href="buscador.html">Buscador</a> &gt; 
+            Resultados
+        </p>
+    </nav>
 
     <h1>Resultados de la Búsqueda</h1>
     <p>La búsqueda no ha producido resultados para el criterio de búsqueda empleado, pruebe a realizar otra búsqueda.</p>
