--- a/declaracion_accesibilidad.html
+++ b/declaracion_accesibilidad.html
@@ -12,6 +12,12 @@
         </a>
     </header>
 
+    <nav aria-label="breadcrumbs">
+        <p>
+            <a href="index.html">Inicio</a> &gt; 
+            Declaración de Accesibilidad
+        </p>
+    </nav>
     <main>
         <h2>Declaración de accesibilidad - HealthHub</h2>
         
