--- a/indices/a.html
+++ b/indices/a.html
@@ -10,7 +10,15 @@
         <a href="../index.html">
             <img src="../imagenes/logo.jpeg" alt="Logo de la página" width="200" height="200">
         </a>
+      
     </header>
+    <nav aria-label="breadcrumbs">
+        <p>
+            <a href="../index.html">Inicio</a> &gt; 
+            Índice Alfabético &gt; 
+            D
+        </p>
+    </nav>
 
     <main>
         <h2>Artículos letra A</h2>
