--- a/indices/d.html
+++ b/indices/d.html
@@ -11,7 +11,13 @@
             <img src="../imagenes/logo.jpeg" alt="Logo de la página" width="200" height="200">
         </a>
     </header>
-    
+    <nav aria-label="breadcrumbs">
+        <p>
+            <a href="../index.html">Inicio</a> &gt; 
+            Índice Alfabético &gt; 
+            D
+        </p>
+    </nav>
 
     <main>
         <h2>Artículos letra D</h2>
