--- a/formulario/respuestaformhtml5.html
+++ b/formulario/respuestaformhtml5.html
@@ -11,6 +11,15 @@
             <img src="../imagenes/logo.jpeg" alt="Logo de la página" width="200" height="200">
         </a>
     </header>
+    
+    <nav aria-label="breadcrumbs">
+        <p>
+            <a href="../index.html">Inicio</a> &gt; 
+            <a href="formulariohtml5.html">Formulario de síntomas</a> &gt; 
+            Respuestas del Formulario de síntomas
+        </p>
+    </nav>
+
 
     <main>
         <h2>Respuesta formulario de sintomas</h2>
