--- a/buscador/buscador.html
+++ b/buscador/buscador.html
@@ -11,6 +11,14 @@
             <img src="../imagenes/logo.jpeg" alt="Logo de la página" width="200" height="200">
         </a>
     </header>
+    
+    <nav aria-label="breadcrumbs">
+        <p>
+            <a href="../index.html">Inicio</a> &gt; 
+            Buscador
+        </p>
+    </nav>
+
     <main>
         <h1>Buscador de Artículos de HealthHub</h1>
         <p>Los campos marcados con * son obligatorios.</p>
