--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <section>
         <h2>Ir al <a href="formulario/formulariohtml5.html">Formulario de síntomas</a> de HealthHub.</h2>
     </section>
+
+    <section>
+        <h2>Ir al <a href="mapa.html">Mapa</a> de HealthHub.</h2>
+    </section>
     
     <nav>
         <h2>Índice Alfabético</h2>
@@ -111,53 +115,6 @@
         <h3>¿Le ha servido nuestra enciclopedia?</h3>
         <p>Cualquier duda, sugerencia o problema que haya tenido puede rellenar este <a href="formulario/formulario.html">formulario de contacto</a> y nos pondremos en contacto con usted lo antes posible.</p>
     </aside>
-
-    <section>
-    <h3>Mapa del Sitio</h3>
-    <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="buscador/buscador.html">Buscador</a>
-            <ul>
-                <li><a href="buscador/resultado.html">Resultados</a></li>
-            </ul>
-        </li>
-        <li><a href="formulario/formulariohtml5.html">Formulario de síntomas</a>
-            <ul>
-                <li><a href="formulario/formulariohtml5.html">Formulario de síntomas</a></li>
-                <li><a href="formulario/respuestaformhtml5.html">Respuestas del formulario de síntomas</a></li>
-            </ul>
-        </li>
-        <li><a href="indices/a.html">Índice Alfabético - A</a>
-            <ul>
-                <li><a href="indices/a.html">A</a></li>
-                <li><a href="articulos/alergia.html">Alergias</a></li>
-                <li><a href="articulos/asma.html">Asma</a></li>
-            </ul>
-        </li>
-        <li><a href="indices/d.html">Índice Alfabético - D</a>
-            <ul>
-                <li><a href="indices/d.html">D</a></li>
-                <li><a href="articulos/diabetes.html">Diabetes</a></li>
-                <li><a href="articulos/dolor_cabeza.html">Dolor de cabeza</a></li>
-            </ul>
-        </li>
-        <li><a href="temas_destacados.html">Temas destacados</a>
-            <ul>
-                <li><a href="articulos/alergia.html">Alergias</a></li>
-                <li><a href="articulos/asma.html">Asma</a></li>
-                <li><a href="articulos/diabetes.html">Diabetes</a></li>
-                <li><a href="articulos/dolor_cabeza.html">Dolor de cabeza</a></li>
-            </ul>
-        </li>
-        <li><a href="formulario/formulario.html">Formulario de ayuda al cliente</a>
-            <ul>
-                <li><a href="formulario/formulario.html">Formulario de contacto</a></li>
-                <li><a href="formulario/respuestaform.html">Respuestas del formulario de ayuda</a></li>
-            </ul>
-        </li>
-        <li><a href="declaracion_accesibilidad.html">Declaración de Accesibilidad</a></li>
-    </ul>
-    </section>
     
     <footer>
         <p>Enciclopedia Ilustrada de Salud &copy; 2024. Todos los derechos reservados por Hugo Molina y Cristian Such.</p>
