--- a/declaracion_accesibilidadingles.html
+++ b/declaracion_accesibilidadingles.html
@@ -8,7 +8,7 @@
     <header>
         <h1>HealthHub - Illustrated Health Encyclopedia</h1>
         <a href="index.html">
-            <img src="../images/logo.jpeg" alt="Website Logo" width="200" height="200">
+            <img src="../imagenes/logo.jpeg" alt="Website Logo" width="200" height="200">
         </a>
     </header>
 
