--- a/declaracion_accesibilidad.html
+++ b/declaracion_accesibilidad.html
@@ -10,13 +10,7 @@
         <a href="index.html">
             <img src="../imagenes/logo.jpeg" alt="Logo de la página" width="200" height="200">
         </a>
-        
-        <nav>
-            <ul>
-                <li><a href="declaracion_accesibilidadingles.html">Accessibility Statement (English)</a></li>
-            </ul>
-        </nav>
-        
+        <a href="declaracion_accesibilidadingles.html">Accessibility Statement (English)</a></li>
     </header>
 
     <nav aria-label="breadcrumbs">
