--- a/mapa.html
+++ b/mapa.html
@@ -63,6 +63,7 @@
                 </ul>
             </li>
             <li><a href="declaracion_accesibilidad.html">Declaración de Accesibilidad</a></li>
+            <li><a href="declaracion_accesibilidadingles.html">Accessibility Statement (English)</a></li>
         </ul>
         </section>
        
@@ -70,6 +71,7 @@
     
     <footer>
         <p>Enciclopedia Ilustrada de Salud &copy; 2024. Todos los derechos reservados por Hugo Molina y Cristian Such.</p>
+        <p><a href="declaracion_accesibilidad.html">Declaración de Accesibilidad</a> // <a href="declaracion_accesibilidadingles.html">Accessibility Statement (English)</a></p>
     </footer>
 </body>
 </html>
