--- a/indices/d.html
+++ b/indices/d.html
@@ -30,7 +30,7 @@
 
      <footer>
         <p>Enciclopedia Ilustrada de Salud &copy; 2024. Todos los derechos reservados por Hugo Molina y Cristian Such.</p>
-        <p><a href="../declaracion_accesibilidad.html">Declaración de Accesibilidad</a></p>
+        <p><a href="declaracion_accesibilidad.html">Declaración de Accesibilidad</a> // <a href="declaracion_accesibilidadingles.html">Accessibility Statement (English)</a></p>
     </footer>
 </body>
 </html>
