--- a/mapa.html
+++ b/mapa.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Declaración de accesibilidad - HealthHub</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
