--- a/indices/error404.html
+++ b/indices/error404.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Error 404 - Página no encontrada</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
