--- a/formulario/formulario.html
+++ b/formulario/formulario.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Formulario de contacto - HealthHub </title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 <body>
    <header>
