--- a/articulos/diabetes.html
+++ b/articulos/diabetes.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Diabetes - HealtHub</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
         table, tr, td, th {
                 border: 1px solid #0540f2;
