--- a/articulos/dolor_cabeza.html
+++ b/articulos/dolor_cabeza.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Dolor de Cabeza - HealthHub</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
