--- a/buscador/resultado.html
+++ b/buscador/resultado.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Resultados de la Búsqueda - HealthHub</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
