--- a/buscador/resultado.html
+++ b/buscador/resultado.html
@@ -13,20 +13,20 @@
             <img src="../imagenes/logo.jpeg" alt="Logo de la página" width="200" height="200">
         </a>
     </header>
-    <nav aria-label="breadcrumbs">
+   <main>
+       <nav aria-label="breadcrumbs">
         <p>
             <a href="../index.html">Inicio</a> &gt; 
             <a href="buscador.html">Buscador</a> &gt; 
             Resultados
         </p>
     </nav>
-
     <h1>Resultados de la Búsqueda</h1>
     <p>La búsqueda no ha producido resultados para el criterio de búsqueda empleado, pruebe a realizar otra búsqueda.</p>
     
     <a href="buscador.html">Volver a buscar<br></a>
     <a href="../index.html">Volver al índice</a>
-
+</main>
    <footer>
         <p>Enciclopedia Ilustrada de Salud &copy; 2024. Todos los derechos reservados por Hugo Molina y Cristian Such.</p>
         <p><a href="../declaracion_accesibilidad.html">Declaración de Accesibilidad</a> // <a href="../declaracion_accesibilidadingles.html">Accessibility Statement (English)</a></p>
