--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="imagenes/logo.jpeg" alt="Logo de la pagina" width="200" height="200">
         <p>Bienvenido a nuestra mini enciclopedia ilustrada de salud. Aquí encontrarás información confiable sobre una variedad de temas médicos.</p>
     </header>
-
+    <main>
     <section>
         <h2>Ir al <a href="buscador/buscador.html">Buscador</a> de HealthHub.</h2>
     </section>
@@ -116,7 +116,8 @@
         <h3>¿Le ha servido nuestra enciclopedia?</h3>
         <p>Cualquier duda, sugerencia o problema que haya tenido puede rellenar este <a href="formulario/formulario.html">formulario de contacto</a> y nos pondremos en contacto con usted lo antes posible.</p>
     </aside>
-    
+    </main>
+
     <footer>
         <p>Enciclopedia Ilustrada de Salud &copy; 2024. Todos los derechos reservados por Hugo Molina y Cristian Such.</p>
         <p><a href="declaracion_accesibilidad.html">Declaración de Accesibilidad</a> // <a href="declaracion_accesibilidadingles.html">Accessibility Statement (English)</a></p>
