--- a/formulario/formulario.html
+++ b/formulario/formulario.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Formulario de contacto - HealthHub </title>
         
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="../styles.css">
     </head>
 <body>
    <header>
