--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
         <nav>
         <h2>Índice Alfabético</h2>
-        <ul>
+        <ul class="indice-alfabetico">
             <li><a href="indices/a.html">A</a></li>
             <li><a href="indices/error404.html">B</a></li>
             <li><a href="indices/error404.html">C</a></li>
