--- a/articulos/alergia.html
+++ b/articulos/alergia.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Alergia - HealtHub</title>
     
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <style>
         table, tr, td, th {
                 border: 1px solid #0540f2;
