--- a/buscador/buscador.html
+++ b/buscador/buscador.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Buscador - HealtHub</title>
     
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <header>
