--- a/articulos/diabetes.html
+++ b/articulos/diabetes.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Diabetes - HealtHub</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
     
     <style>
         table, tr, td, th {
