--- a/articulos/dolor_cabeza.html
+++ b/articulos/dolor_cabeza.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Dolor de Cabeza - HealthHub</title>
     
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
