--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         
         <nav>
-        <h2>Índice Alfabético</h2>
+        <h2 class="indice-alfabetico">Índice Alfabético</h2>
         <ul class="indice-alfabetico">
             <li><a href="indices/a.html">A</a></li>
             <li><a href="indices/error404.html">B</a></li>
