--- a/indices/a.html
+++ b/indices/a.html
@@ -20,8 +20,7 @@
         <nav aria-label="breadcrumbs">
             <p>
                 <a href="../index.html">Inicio</a> &gt; 
-                Índice Alfabético &gt; 
-                A
+                Letra A
             </p>
         </nav>
         <h2>Artículos letra A</h2>
