--- a/indices/d.html
+++ b/indices/d.html
@@ -20,8 +20,7 @@
         <nav aria-label="breadcrumbs">
             <p>
                 <a href="../index.html">Inicio</a> &gt; 
-                Índice Alfabético &gt; 
-                D
+                letra D
             </p>
         </nav>
         <h2>Artículos letra D</h2>
