--- a/indices/a.html
+++ b/indices/a.html
@@ -28,7 +28,7 @@
             <li><a href="../articulos/asma.html">Asma</a></li>
             <li><a href="../articulos/alergia.html">Alergia</a></li>
         </ul>
-        <a href="../index.html">Volver al índice alfabético</a>
+        <a href="../index.html">Volver a la pàgina principal</a>
     </main>
 
      <footer>
