--- a/indices/d.html
+++ b/indices/d.html
@@ -28,7 +28,7 @@
             <li><a href="../articulos/dolor_cabeza.html">Dolor de Cabeza</a></li>
             <li><a href="../articulos/diabetes.html">Diabetes</a></li>
         </ul>
-        <a href="../index.html">Volver al índice alfabético</a>
+        <a href="../index.html">Volver a la pàgina principal</a>
     </main>
 
      <footer>
