--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div>
     <header>
         <h1>HealthHub - Enciclopedia Ilustrada de Salud</h1>
-        <img src="imagenes/logo.jpeg" alt="Logo de la pagina" width="200" height="200">
+        <img src="imagenes/logo.png" alt="Logo de la pagina" width="200" height="200">
         <p>Bienvenido a nuestra mini enciclopedia ilustrada de salud. Aquí encontrarás información confiable sobre una variedad de temas médicos.</p>
     </header>
 
