--- a/declaracion_accesibilidadingles.html
+++ b/declaracion_accesibilidadingles.html
@@ -17,7 +17,7 @@
         <a href="#contenido-principal" class="skip-link">Saltar al contenido principal</a>
         <h1>HealthHub - Illustrated Health Encyclopedia</h1>
         <a href="index.html">
-            <img src="imagenes/logo.jpeg" alt="Website Logo" width="200" height="200">
+            <img src="imagenes/logo.png" alt="Website Logo" width="200" height="200">
         </a>
         <br>
         
