--- a/indices/error404.html
+++ b/indices/error404.html
@@ -17,7 +17,7 @@
         <h1>HealthHub - Enciclopedia Ilustrada de Salud</h1>
         <h2>Error 404 - Página no encontrada</h2>
         <a href="../index.html">
-            <img src="../imagenes/caratriste.jpg" alt="Imagen de una cara triste" width="200" height="200">
+            <img src="../imagenes/logo.png" alt="Imagen de una cara triste" width="200" height="200">
         </a>
     </header>
 
