--- a/articulos/diabetes.html
+++ b/articulos/diabetes.html
@@ -18,7 +18,7 @@
         <a href="#contenido-principal" class="skip-link">Saltar al contenido principal</a>
         <h1>HealthHub - Enciclopedia Ilustrada de Salud</h1>
         <a href="../index.html">
-            <img src="../imagenes/logo.jpeg" alt="Logo de la página" width="200" height="200">
+            <img src="../imagenes/logo.png" alt="Logo de la página" width="200" height="200">
         </a>
         <br>
 
