--- a/declaracion_accesibilidad.html
+++ b/declaracion_accesibilidad.html
@@ -61,6 +61,15 @@
             <p>Este sitio web cumple en su mayoría con el nivel A de las Pautas de Accesibilidad para el Contenido Web (WCAG) 2.1, aunque aún estamos trabajando en mejorar ciertos elementos para garantizar una accesibilidad total.</p>
         </section>
 
+        <section>
+            <h3>Archivos accesibilidad</h3>
+            <button onclick="window.open('pdfs/accesible.pdf', '_blank')">Abrir PDF 1</button>
+            <button onclick="window.open('pdfs/noaccesible.pdf', '_blank')">Abrir PDF 2</button>
+            <button onclick="window.open('pdfs/accesible2.docx', '_blank')">Abrir Word 1</button>
+            <button onclick="window.open('pdfs/noaccesible2.docx', '_blank')">Abrir Word 2</button>
+        </section>
+        
+
         <p>Volver al <a href="index.html">índice alfabético</a>.</p>
     </main>
     
