--- a/declaracion_accesibilidad.html
+++ b/declaracion_accesibilidad.html
@@ -63,10 +63,10 @@
 
         <section>
             <h3>Archivos accesibilidad</h3>
-            <button onclick="window.open('pdfs/accesible.pdf', '_blank')">Abrir PDF 1</button>
-            <button onclick="window.open('pdfs/noaccesible.pdf', '_blank')">Abrir PDF 2</button>
-            <button onclick="window.open('pdfs/accesible2.docx', '_blank')">Abrir Word 1</button>
-            <button onclick="window.open('pdfs/noaccesible2.docx', '_blank')">Abrir Word 2</button>
+            <button onclick="window.open('pdfs/accesible.pdf', '_blank')">PDF accesible </button>
+            <button onclick="window.open('pdfs/noaccesible.pdf', '_blank')">PDF NO accesible</button>
+            <button onclick="window.open('pdfs/accesible2.docx', '_blank')">Word accesible</button>
+            <button onclick="window.open('pdfs/noaccesible2.docx', '_blank')">Word NO accesible</button>
         </section>
         
 
