--- a/declaracion_accesibilidadingles.html
+++ b/declaracion_accesibilidadingles.html
@@ -59,6 +59,14 @@
             <p>This website mostly complies with level A of the Web Content Accessibility Guidelines (WCAG) 2.1, although we are still working to improve certain elements to ensure full accessibility.</p>
         </section>
 
+        <section>
+            <h3>Accessibility Files</h3>
+            <button onclick="window.open('pdfs/accesible.pdf', '_blank')">Accessible PDF</button>
+            <button onclick="window.open('pdfs/noaccesible.pdf', '_blank')">Non-Accessible PDF</button>
+            <button onclick="window.open('pdfs/accesible2.docx', '_blank')">Accessible Word</button>
+            <button onclick="window.open('pdfs/noaccesible2.docx', '_blank')">Non-Accessible Word</button>
+        </section>
+
         <p>Return to the <a href="index.html">alphabetical index</a>.</p>
     </main>
     
