--- a/articulos/diabetes.html
+++ b/articulos/diabetes.html
@@ -174,7 +174,7 @@
         <!-- Video embebido directamente usando la etiqueta <video> -->
         <h2>Video embebido directamente</h2>
         <video width="560" height="315" controls>
-            <source src="../videos/diabetes.mp4" type="video/mp4">
+            <source src="../nuestro.mp4" type="video/mp4">
             Tu navegador no soporta la etiqueta de video.
         </video>
         
