--- a/articulos/diabetes.html
+++ b/articulos/diabetes.html
@@ -175,6 +175,10 @@
         <h2>Video embebido directamente</h2>
         <video width="560" height="315" controls>
             <source src="../nuestro.mp4" type="video/mp4">
+            <!-- Subtítulos en Español -->
+            <track src="../espanol.vtt" kind="subtitles" srclang="es" label="Español" default>
+            <!-- Subtítulos en Inglés -->
+            <track src="../ingles.vtt" kind="subtitles" srclang="en" label="Inglés">
             Tu navegador no soporta la etiqueta de video.
         </video>
         
