--- a/articulos/diabetes.html
+++ b/articulos/diabetes.html
@@ -198,7 +198,7 @@
         <h3>Transcripciones</h3>
         <ul>
             <li><a href="../subt.txt" target="_blank">Transcripción en Español</a></li>
-            <li><a href="../ingles.txt target="_blank">Transcripción en Inglés</a></li>
+            <li><a href="../ingles.txt" target="_blank">Transcripción en Inglés</a></li>
         </ul>
 
         <h4><a href="../indices/d.html">Volver a la letra D </a></h4>
