--- a/articulos/diabetes.html
+++ b/articulos/diabetes.html
@@ -185,7 +185,7 @@
         <!-- Video desde Amara con subtítulos -->
         <h2>Video en YouTube con subtítulos de Amara</h2>
 	<div id="video-amara">
-	    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=BGyAeSe8_tY" title="Video: Diabetes y sus tipos | Causas, síntomas y tratamiento con subtitulos Amara" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+	    <div class="amara-embed" data-url="https://www.youtube.com/watch?v=BGyAeSe8_tY&t=1s" data-team="null"></div>
 	</div>
 
         
