--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <a href="#contenido-principal" class="skip-link">Saltar al contenido principal</a>
     
     <main id="contenido-principal">
+        <h2>Blog de HealthHub</h2>
         <iframe src="https://healthhub02.wordpress.com/" width="100%" height="600" title="HealthHub"></iframe>
         <p>Si no puedes ver el contenido, visita el sitio directamente aquí: <a href="https://healthhub02.wordpress.com/" target="_blank">HealthHub</a></p>
 
