--- a/declaracion_accesibilidad.html
+++ b/declaracion_accesibilidad.html
@@ -94,7 +94,7 @@
         <ul>
             <li><strong>Correo electrónico:</strong> healthhub@gmail.com</li>
             <li><strong>Teléfono:</strong> 123321123</li>
-            <li><strong>Formulario de contacto:</strong> <a href="formulario.html">Formulario de accesibilidad</a></li>
+            <li><strong>Formulario de contacto:</strong> <a href="formulario/formulario.html">Formulario de accesibilidad</a></li>
         </ul>
     
         <h3>Procedimiento de Reclamación</h3>
