--- a/declaracion_accesibilidad.html
+++ b/declaracion_accesibilidad.html
@@ -53,7 +53,7 @@
         
         <section>
             <h3>1.3 - Mecanismos de retroalimentación</h3>
-            <p>Si experimentas dificultades para acceder a cualquier parte de nuestro sitio web o deseas proporcionar comentarios sobre la accesibilidad, no dudes en contactarnos a través del <a href="../formulario/formulario.html">Formulario de ayuda al cliente</a>.</p>
+            <p>Si experimentas dificultades para acceder a cualquier parte de nuestro sitio web o deseas proporcionar comentarios sobre la accesibilidad, no dudes en contactarnos a través del <a href="formulario/formulario.html">Formulario de ayuda al cliente</a>.</p>
         </section>
         
         <section>
