--- a/mapa.html
+++ b/mapa.html
@@ -60,7 +60,7 @@
                     <li><a href="articulos/dolor_cabeza.html">Dolor de cabeza</a></li>
                 </ul>
             </li>
-            <li><a href="temas_destacados.html">Temas destacados</a>
+            <li>Temas destacados
                 <ul>
                     <li><a href="articulos/alergia.html">Alergias</a></li>
                     <li><a href="articulos/asma.html">Asma</a></li>
